# hexgraph

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Dockerfile.build  Dockerfile.fuzz  Dockerfile.sandbox  Makefile  PROGRESS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  release-please-config.json  setup.sh
.claude/: settings.json
.claude/agents/: pr-reviewer.md
.claude/hooks/: guard-pr-reviewer.sh
.claude/skills/ux-assessment/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
.hghome/: settings.json
context/: README.md  SPEC.md
context/docs/: mock-llm-provider.md
context/fixtures/mock_llm/: _manifest.yaml
context/fixtures/targets/: README.md
context/schemas/: finding.schema.json
docker/: angr.Dockerfile  app-entrypoint.sh  app.Dockerfile  build.Dockerfile  fuzz.Dockerfile  sandbox.Dockerfile
docker/firmae/: Dockerfile  rehost_entry.sh
docker/qemu/: Dockerfile  qemu_entry.sh
docs/: build-from-source.md  design-dynamic-surfaces.md  design-fuzzing-and-source.md  design-graph-presentation.md  design-rehosting.md  design-verification-oracles.md  design-vision.md  dynamic-surfaces-rehosting-remote.md  engagement-answer-key.md  engagement-brief.md  engagement-rehosted.md  engagement-vulnrouter.md  fuzzing.md  graph-ui.md  implementation-plan.md  journal.md  mcp.md  mock-llm-provider.md  observations.md  re-external-tools.md  setup.md  ui-backlog.md  ui-sexiness.md  ux-eval-vr.md  verification-assurance.md  vr-feedback.md
docs/design/: design-curatable-targets.md  design-fuzzing-and-source.md  design-graph-presentation.md  design-phase5-external-tools.md  design-re-tooling.md  design-rehosting.md  design-verification-oracles.md  design-vision.md  design-working-memory.md  implementation-plan.md
docs/dev/: phase-o-decision-log.md  phase2-decision-log.md  phase3-decision-log.md  phase5-eval-implementation-plan.md  releasing.md  security-audit-2026-06-03.md  ui-backlog.md  ux-contract.md
docs/dev/dogfood/: 2026-06-08-implementation-plan.md  2026-06-09-cisco-asr920-plan.md
docs/images/: README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: api.ts  highlight.ts  main.tsx  taskMeta.ts  theme.css  types.d.ts
frontend/src/components/: Annotations.tsx  ArtifactsView.tsx  AssuranceChip.tsx  Author.tsx  BuildDetailModal.tsx  BuildModal.tsx  CampaignsPanel.tsx  CodePane.tsx  EgressPanel.tsx  ErrorBoundary.tsx  FilesystemBrowser.tsx  FindingsPanel.tsx  FunctionSourceViewer.tsx  FuzzModal.tsx  GhidraImportModal.tsx  GraphView.tsx  Header.tsx  HypothesesPanel.tsx  HypothesisPanel.tsx  Icon.tsx  ImportDirModal.tsx  Inspector.tsx  JournalComposer.tsx  JournalMarkdown.tsx  JournalPanel.tsx  LaunchModal.tsx  Launcher.tsx  MatrixView.tsx  Mitigations.tsx  NodeInspector.tsx  Provenance.tsx  ReportModal.tsx  RunCompareModal.tsx  SourceBrowser.tsx  TableView.tsx  TasksPanel.tsx  ToolResults.tsx  graphLayers.ts
frontend/src/hooks/: useWorkspaceLayout.ts
frontend/src/pages/: Projects.tsx  Settings.tsx  Workspace.tsx
migrations/: env.py
migrations/versions/: 0002_typed_graph.py  0003_context_runs.py  0004_task_anchor.py  0005_triage_envelope.py  0006_annotation.py  0007_target_archived.py  0008_finding_type.py  0009_edge_endpoint_indexes.py  0010_egress_event.py  0011_node_archived.py  0012_source_tree.py  0013_build.py  0014_fuzz_campaign.py  0015_fuzz_environment.py  0016_build_supplychain_source_revision.py  0017_observation_store.py  0018_finding_cwe.py  0019_journal.py  0020_target_visible.py  95bb894a0ef6_index_target_parent_id_for_target_.py  bbdb1d98bf54_baseline.py
scripts/: bake_build_info.py  capture_ab.py  capture_screenshots.py  ci_ghidra_decompile_check.py  engagement-rehosted.md  engagement-vulnrouter.md  rehost_engagement.py  seed_graph_tiers.py  seed_showcase.py  vulnrouter_engagement.py
src/hexgraph/: __init__.py  agent_setup.py  cli.py  config.py  demo.py  entitlements.py  eval.py  mcp_server.py  metering.py  paths.py  policy.py  principal.py  settings.py  setup_catalog.py  setup_wizard.py  version.py  vr_skill.py
src/hexgraph/agent/: __init__.py  agent_delegate.py  agent_setup.py  agent_tools.py  mcp_catalog.py  mcp_server.py  mcp_tools.py  record_keeping.py  vr_skill.py
src/hexgraph/api/: app.py  loopback.py
src/hexgraph/db/: __init__.py  jsontypes.py  migrate.py  models.py  session.py
src/hexgraph/engine/: agent_delegate.py  agent_tools.py  annotations.py  assurance.py  audit.py  authoring.py  binutils.py  build.py  builds.py  callback_listener.py  campaigns.py  capabilities.py  cas.py  context.py  crosstarget.py  dedup.py  edge_schemas.py  edges.py  enrichment.py  filesystem.py  findings.py  floss.py  followups.py  fuzzing.py  ghidra.py  ghidra_bridge.py  ghidra_project.py  graph.py  harness.py  harness_promote.py  hypotheses.py  ingest.py  journal.py  llm_tasks.py  maintenance.py  (+32 more)
tests/: conftest.py  test_address_access.py  test_agent_delegate.py  test_analysis_gate.py  test_annotations.py  test_api.py  test_assurance.py  test_authoring.py  test_auto_annotate.py  test_battletest_assurance.py  test_binutils.py  test_boofuzz_probe.py  test_breadth_xrefs.py  test_bridge.py  test_build.py  test_build_e2e.py  test_buildfuzz_handoff.py  test_campaign_e2e.py  test_campaigns.py  test_campaigns_phase4.py  test_context_graph.py  test_contract.py  test_curation.py  test_db_lock_contention.py  test_decompiler_error_surfacing.py  test_decompiler_fallback.py  test_demo.py  test_dirimport.py  test_disassemble_range.py  test_disk_image.py  test_doctor.py  test_edge_dedup.py  test_editing.py  test_egress.py  test_emulation.py  test_enrichment.py  test_evidence_coerce.py  test_evidence_json_column.py  test_extraction_honesty.py  test_filesystem.py  (+119 more)
tests/fixtures/: build.sh  floss_fixture.c  libupnp.c  vuln_httpd  vuln_httpd.c
(+189 files in other folders)
