[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexgraph"
version = "0.0.1"
description = "Self-hosted, local-only agentic vulnerability-research workbench (MVP)"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
# Added per milestone so each install stays minimal and offline-friendly.
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
]
# NB: there is no host-side "analysis" extra. The binary-analysis libs
# (r2pipe/lief/pyelftools) are imported ONLY inside sandbox/probes/*.py, which run
# in the disposable sandbox image (Dockerfile.sandbox), never in the host process.
# Real Anthropic backend (BYOK). The mock backend needs none of this.
byok = [
    "anthropic>=0.40",
]
# MCP server: expose HexGraph's sandboxed tools to a coding agent (driver mode).
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "mcp>=1.2",
]

[project.scripts]
hexgraph = "hexgraph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hexgraph = [
    "web/dist/index.html",
    "web/dist/assets/*",
    "sandbox/probes/*.py",
    # Canonical Finding schema + mock-LLM fixtures ship inside the package
    # (resolved by paths.py relative to the package, not a repo-root folder).
    "schemas/*.json",
    "llm/fixtures/mock_llm/*.yaml",
    "llm/fixtures/mock_llm/**/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests default to the mock backend (set in tests/conftest.py): zero key, zero network (SPEC §1).
