[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexgraph"
version = "0.9.0"
description = "Self-hosted, local-only agentic vulnerability-research workbench"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
# Added per milestone so each install stays minimal and offline-friendly.
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
    # The interactive `hexgraph setup` wizard (Rich framing + questionary prompts).
    # Pure-Python, offline, no native deps; the headless/non-interactive path imports
    # them lazily so a missing lib never blocks the CI baseline.
    "rich>=13.0",
    "questionary>=2.0",
]
# The interactive setup wizard's TUI libs, on their own so a minimal install can pull
# just these (also bundled into `server` since `just setup` runs it).
setup = [
    "rich>=13.0",
    "questionary>=2.0",
]
# NB: there is no host-side "analysis" extra. The binary-analysis libs
# (r2pipe/lief/pyelftools) are imported ONLY inside sandbox/probes/*.py, which run
# in the disposable sandbox image (docker/sandbox.Dockerfile), never in the host process.
# Real Anthropic backend (BYOK). The mock backend needs none of this.
byok = [
    "anthropic>=0.40",
]
# MCP server: expose HexGraph's sandboxed tools to a coding agent (driver mode).
mcp = [
    "mcp>=1.2",
]
# Ghidra bridge (optional): connect over loopback to a Ghidra you already have open
# and pull decompilation from your live analysis (features.ghidra.mode = "bridge").
# `ghidra_bridge` pulls in `jfx_bridge`. Deliberately NOT in `dev` — CI exercises the
# bridge-client-absent path, and the live remote calls need a running Ghidra.
bridge = [
    "ghidra_bridge>=1.0",
]
dev = [
    "pytest>=8.0",
    # Per-test wall-clock cap — backstops a wedged real-container E2E so a hung test fails
    # loudly instead of blocking the run forever (see `just test-heavy`).
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "anthropic>=0.40",
    "mcp>=1.2",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
hexgraph = "hexgraph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hexgraph = [
    "web/dist/index.html",
    "web/dist/assets/*",
    "sandbox/probes/*.py",
    # Minimal seccomp profile (default + personality(ADDR_NO_RANDOMIZE)) for the ASan
    # source-fuzz ASLR-off launch; resolved by runner.py relative to the package.
    "sandbox/seccomp/*.json",
    # Canonical Finding schema + mock-LLM fixtures ship inside the package
    # (resolved by paths.py relative to the package, not a repo-root folder).
    "schemas/*.json",
    "llm/fixtures/mock_llm/*.yaml",
    "llm/fixtures/mock_llm/**/*.json",
    # Bundled YARA rules (Phase 5B) ship in-package, resolved by paths.bundled_yara_rules_dir.
    "rules/yara/*.yar",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests default to the mock backend (set in tests/conftest.py): zero key, zero network (SPEC §1).
markers = [
    # Heavy real-container E2E: a fuzz campaign or firmware rehost boot that spins up a real
    # Docker container and runs for many seconds-to-minutes. These ONLY run when the relevant
    # image is built (conftest.SANDBOX_READY gates them), so on a fully-provisioned dev box a
    # plain `pytest`/`just test` would run the whole slow tier — and a flaky one could wedge it.
    # `just test` deselects them (`-m 'not slow'`); run them via `just test-heavy` or in CI's
    # live-tests job (which is where they belong).
    "slow: heavy real-container E2E (fuzz campaign / rehost boot); deselected by default in 'just test'",
]
